Closed
Bug 1235340
Opened 10 years ago
Closed 10 years ago
[Z3C] Green/Flash images when playing FTU tutorial video with OpenMax PDM enabled.
Categories
(Core :: Audio/Video: Playback, defect)
Tracking
()
RESOLVED
FIXED
mozilla46
| Tracking | Status | |
|---|---|---|
| firefox46 | --- | fixed |
People
(Reporter: jhlin, Assigned: jhlin)
References
Details
Attachments
(1 file, 1 obsolete file)
|
2.06 KB,
patch
|
jhlin
:
review+
|
Details | Diff | Splinter Review |
STR:
1. Goto 'Settings' > 'Developer'
2. Click 'Launch First Time Use'
3. Clicking 'Next' all the way to video tutorial page. The video will start playing, but it shows green image and flash.
| Assignee | ||
Comment 1•10 years ago
|
||
Currently OmxDataDecoder always disable/reenable port when receiving OMX_EventPortSettingsChanged event [1].
On Z3C, decoder will first generate OMX_EventPortSettingsChanged(nData2: OMX_IndexParamPortDefinition), and after the port is reenabled, it will generate another OMX_EventPortSettingsChanged(nData2: OMX_IndexConfigCommonOutputCrop), which causes OmxDataDecoder to disable/reenable the port again.
Stagefright addresses this by examining nData2 and not always disabling/reenabling the port [2].
[1] https://dxr.mozilla.org/mozilla-central/source/dom/media/platforms/omx/OmxDataDecoder.cpp?from=OmxDataDecoder.cpp#659
[2] https://android.googlesource.com/platform/frameworks/av/+/kitkat-release/media/libstagefright/ACodec.cpp#4241
| Assignee | ||
Comment 2•10 years ago
|
||
Attachment #8702828 -
Flags: feedback?(ayang)
Updated•10 years ago
|
Attachment #8702828 -
Flags: feedback?(ayang) → feedback+
| Assignee | ||
Updated•10 years ago
|
Attachment #8702828 -
Flags: review?(sotaro.ikeda.g)
Updated•10 years ago
|
Assignee: nobody → jolin
Status: NEW → ASSIGNED
Comment 3•10 years ago
|
||
Comment on attachment 8702828 [details] [diff] [review]
Handle OMX_EventPortSettingsChanged like ACodec.
Review of attachment 8702828 [details] [diff] [review]:
-----------------------------------------------------------------
Looks good :)
Attachment #8702828 -
Flags: review?(sotaro.ikeda.g) → review+
| Assignee | ||
Comment 4•10 years ago
|
||
Carry r+ from sotaro.
Attachment #8702828 -
Attachment is obsolete: true
Attachment #8707715 -
Flags: review+
| Assignee | ||
Comment 5•10 years ago
|
||
Try result: https://treeherder.mozilla.org/#/jobs?repo=try&revision=0eaf7d838189&selectedJob=15389840
Keywords: checkin-needed
Keywords: checkin-needed
Comment 7•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in
before you can comment on or make changes to this bug.
Description
•