Bug 1235340 - Don't always disable/enable port for OMX_EventPortSettingsChanged. r=sotaro